Add support transaction in ParticipantProvider
Issue-ID: POLICY-3800
Change-Id: I938c2731a30013b5f8e11a23a86d117300c95bff
Signed-off-by: FrancescoFioraEst <francesco.fiora@est.tech>